# CodeOPS

./: .gitignore  README.txt  pyproject.toml
cli/: codeops.py
core/: executor.py  init.py  lexer.py  parser.py
docs/: syntax.txt
tests/: basic.ops
