[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeops"
version = "0.1.0"
description = "Operations-oriented programming language for automation and task flows"
readme = "README.txt"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
{ name = "CodeOPS Contributors" }
]
keywords = ["language", "automation", "devops", "scripting"]
classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python :: 3",
"License :: OSI Approved :: Mozilla Public License 2.0",
"Operating System :: OS Independent"
]

[project.urls]
Homepage = "[https://github.com/CodeOPStair/CodeOPS](https://github.com/CodeOPStair/CodeOPS)"
Repository = "[https://github.com/CodeOPStair/CodeOPS](https://github.com/CodeOPStair/CodeOPS)"
Issues = "[https://github.com/CodeOPStair/CodeOPS/issues](https://github.com/CodeOPStair/CodeOPS/issues)"

[project.scripts]
codeops = "cli.codeops:main"

[tool.setuptools]
packages = ["core", "cli"]

[tool.setuptools.package-data]
core = ["*.txt"]
